WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
108932
[EFL][WK2] Assertion failure on MiniBrowser exit
https://bugs.webkit.org/show_bug.cgi?id=108932
Summary
[EFL][WK2] Assertion failure on MiniBrowser exit
Sudarsana Nagineni (babu)
Reported
2013-02-05 04:53:25 PST
Assertion failure on EFL MiniBrowser exit. 0x00007f17b7b73f6f in WTF::Mutex::lock (this=0x7f1760000a70) at WebKit/Source/WTF/wtf/ThreadingPthreads.cpp:345 345 ASSERT_UNUSED(result, !result); (gdb) bt #0 0x00007f17b7b73f6f in WTF::Mutex::lock (this=0x7f1760000a70) at WebKit/Source/WTF/wtf/ThreadingPthreads.cpp:345 #1 0x00007f17baff2f14 in WTF::Locker<WTF::Mutex>::Locker (this=0x7f17563a5b80, lockable=...) at WebKit/Source/WTF/wtf/Locker.h:38 #2 0x00007f17bb256360 in WorkQueue::performWork (this=0x7f1760000990) at WebKit/Source/WebKit2/Platform/efl/WorkQueueEfl.cpp:75 #3 0x00007f17bb256a46 in WorkQueue::workQueueThread (workQueue=0x7f1760000990) at WebKit/Source/WebKit2/Platform/efl/WorkQueueEfl.cpp:178 #4 0x00007f17b7b4bb21 in WTF::threadEntryPoint (contextData=0x7f1760000b60) at WebKit/Source/WTF/wtf/Threading.cpp:69 #5 0x00007f17b7b7378a in WTF::wtfThreadEntryPoint (param=0x7f1760000bb0) at WebKit/Source/WTF/wtf/ThreadingPthreads.cpp:196 #6 0x00007f17af9a3e9a in start_thread (arg=0x7f17563a6700) at pthread_create.c:308 #7 0x00007f17ba63ecbd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112 #8 0x0000000000000000 in ?? ()
Attachments
Patch
(2.05 KB, patch)
2013-02-06 08:18 PST
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2013-02-06 07:51:54 PST
WorkQueueEfl needs to be adapted to the latest WebKit2 changes in
r141497
.
Sudarsana Nagineni (babu)
Comment 2
2013-02-06 08:18:04 PST
Created
attachment 186858
[details]
Patch
Thiago Marcos P. Santos
Comment 3
2013-02-06 08:25:32 PST
Comment on
attachment 186858
[details]
Patch LGTM.
WebKit Review Bot
Comment 4
2013-02-06 10:55:42 PST
Comment on
attachment 186858
[details]
Patch Clearing flags on attachment: 186858 Committed
r142009
: <
http://trac.webkit.org/changeset/142009
>
WebKit Review Bot
Comment 5
2013-02-06 10:55:47 PST
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 6
2013-02-12 08:30:27 PST
I can still reproduce this crash sometimes by running the API tests:
http://pastebin.com/BHMAkq4Y
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug