[EFL][WK2] Assertion failure on MiniBrowser exit https://bugs.webkit.org/show_bug.cgi?id=108932

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2013-02-06
Reviewed by Anders Carlsson.

WorkQueue is now refcounted after r141497, so increase ref
count when a new job is scheduled and unref it when it finishes.

* Platform/efl/WorkQueueEfl.cpp:
(WorkQueue::performWork):
(WorkQueue::performTimerWork):
(WorkQueue::dispatch):
(WorkQueue::dispatchAfterDelay):

git-svn-id: svn://svn.chromium.org/blink/trunk@142009 bbb929c8-8fbe-4397-9dbb-9b2b20218538